--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* config/ltmain.m4sh (func_mode_link): $dlsymsobj is really
+	$symfileobj, bug exposed only in the static preloading case
+	(symfileobj is created, but not linked into output).
+
 	* tests/demo-relink.test, tests/depdemo-relink.test: SKIP, don't
 	FAIL if no shared libs available in demo/.  Do not try to access
 	nonexistent files.
