--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ New in 2.1b: 2005-??-??; CVS version 2.1a, Libtool team:
 * New tests for support of Automake subdir-objects.
 * Support for Portland Group compiler on Linux.
 * Fix libltdl on static platforms.
+* Support for linux-dietlibc (`diet' as well as `diet-dyn', separately).
 
 New in 1.9h: 2004-??-??; CVS version 1.9g, Libtool team:
 * Libtool versions can now be parallel installed, except that only one
