--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-01   Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (func_mode_link): Fix quoting bug in last checkin.
+
 2004-11-29   Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Reloadable objects): Fix typo, reported by
