--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* config/ltmain.m4sh: Remove code which is no longer needed
+	now that temp_rpath only contains fully-qualified elements.
+
 2004-11-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS): Treat linux-dietlibc with
