--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* config/ltmain.m4sh: Remove code which is no longer needed
+	now that temp_rpath only contains fully-qualified elements.
+
 2004-11-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* config/general.m4sh: basename sed-subst is anchored and thus
