--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-12-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4 (_LT_CHECK_XSI_SHELL, _LT_PROG_XSI_SHELLFNS): New macros
+	to detect at `configure' time whether the shell supports some XSI
+	extensions and to copy appropriate versions of new shell functions into
+	`libtool' through `config.status'.  Copied functions are Bourne and XSI
+	variants of func_basename, func_dirname (a variant of `dirname' suitable
+	for libtool).  (_LT_SETUP) Require _LT_CHECK_XSI_SHELL.
+	(_LT_CONFIG)  Use _LT_PROG_XSI_SHELLFNS to insert into `libtool' at marker.
+
 	* config/ltmain.m4sh: Set marker for insertion of shell functions.
 
 	* config/general.m4sh (func_quote_for_eval): Only fork if the
