--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-16  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/ltdl.c (trim): Return error rather than do bogus
+	null pointer arithmetic when parsing a malformed .la file.
+
 2004-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* libltdl/Makefile.am (libdlloader_la_SOURCES): Remove lt__strl.c
