--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* HACKING: Update list of non-Libtool-owned files.
+
 2004-12-16  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/ltdl.c (trim): Return error rather than do bogus
