--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-12-20  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* m4/libtool.m4 [solaris] (_LT_LINKER_SHLIBS): Change no_undefined_flag
+	back to ' -z defs'.  Problems with linking against libgcc.a will have
+	to be resolved differently.
+
 	* tests/demo-nopic.test [solaris, sunos]: Skip test.
 
 2004-12-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
