* libtoolize.m4sh: Install `install-sh' as well, needed for configure .. * Makefile.am, Makefile.maint: .. install, update it. * NEWS, doc/libtool.texi (Distributing): .. document it. Reported by Ross Boylan <ross@biostat.ucsf.edu>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-20  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* libtoolize.m4sh: Install `install-sh' as well, needed for configure ..
+	* Makefile.am, Makefile.maint: .. install, update it.
+	* NEWS, doc/libtool.texi (Distributing): .. document it.
+	Reported by Ross Boylan <ross@biostat.ucsf.edu>.
+
 	* m4/libtool.m4 [solaris] (_LT_LINKER_SHLIBS): Add '${wl}-z ${wl}text'
 	to archive_cmds and archive_expsyms_cmds.  I.e., do not allow nopic in
 	shared libraries.
