--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-20  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 	
+	* libtoolize.in: Install `install-sh' as well, needed for configure ..
+	* Makefile.am: .. install, update it.
+	* NEWS, doc/libtool.texi (Distributing): .. document it.
+	Reported by Ross Boylan <ross@biostat.ucsf.edu>.
+
 	* libtool.m4 [solaris] (AC_LIBTOOL_PROG_LD_SHLIBS): Use ${wl} for
 	whole_archive_flag_spec.  Missing backport reported by Ralf Menzel
 	<menzel@ls6.cs.uni-dortmund.de>.
