--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/lt__dirent.c: Include lt__private.h.
+	* libltdl/libltdl/lt__private.h: Include lt__strl.h.
+
 2004-12-20  Peter O'Gorman  <peter@pogma.com>
 
 	* config/ltmain.m4sh (func_extract_archives,func_extract_an_archive): 
