--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/quote.test: Restart under the correct shell (the one
+	$ECHO was computed for).
+
 2004-12-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/lt__dirent.c: Include lt__private.h.
