* ltmain.in (func_extract_archives): Not all shells grok `read -r' (unnecessary in this case). Reported by Ralf Menzel <menzel@ls6.cs.uni-dortmund.de>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-12-28  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* ltmain.in (func_extract_archives): Not all shells grok
+	`read -r' (unnecessary in this case).
+	Reported by Ralf Menzel <menzel@ls6.cs.uni-dortmund.de>.
+
 	* ltmain.in: New variable quote_scanset to work around SunOS ksh
 	`case' backslash-escaping bug: protect character class by variable
 	expansion.  Reported by Alexander Kurz <alexander.kurz@qsc.de>.
