--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libtoolize.m4sh, config/ltmain.m4sh (most functions):
+	New variable $opt_debug is either `:' or `set -x' depending on --debug.
+	Execute at most function entries to cater for ksh which resets `-x'.
+	* tests/defs.m4sh: Ditto for VERBOSE=debug.
+
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS)
 	[cygwin, mingw, pw32 ]: _LT_TAGVAR missing for `fix_srcfile_path'.
 	[ sysv4, sysv5 ]: _LT_TAGVAR missing for `export_dynamic_flag_spec'.
